--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/lg.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="UET Multilingual Neural Machine Translation"
+      content="Multilingual Neural Machine Translation"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>UET Multilingual Neural Machine Translation</title>
+    <title>Multilingual Neural Machine Translation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
