--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/square_logo.png"> 
     <title>Giải pháp TekSpeech - dịch âm thanh, văn bản Trung, Anh - Việt</title>
   </head>
   <body>
